kubernetes/prod/us-west-2/dinopark-ingress-controller-monitor.yml
kind: Service
apiVersion: v1
metadata:
  namespace: dinopark-prod
  name: nginx-ingress-prometheus-discovery
  labels:
    k8s-app: ingress-metrics-service
spec:
  selector:
    app: ingress-nginx
  type: ClusterIP
  clusterIP: None    
  ports:
  - name: metrics
    port: 10254
    protocol: TCP
