kubernetes/prod/us-west-2/phonebook-redirection.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: dinopark-prod
  name: phonebook-redirection
  annotations:
    kubernetes.io/ingress.class: "nginx-dinopark-prod"
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/configuration-snippet: |
        return 301 https://people.mozilla.org$request_uri;
spec:
  tls:
  - hosts:
    - phonebook.mozilla.org
    secretName: phonebook.mozilla.org
  rules:
  - host: phonebook.mozilla.org
