kubernetes/prod/us-west-2/pod-identity-webhook.MutatingWebhookConfiguration.yml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pod-identity-webhook
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRFNE1USXdOakU0TVRJek5sb1hEVEk0TVRJd016RTRNVEl6Tmxvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTFJkCjlaaXA1My9nWllNeDJhejVYZkxTRWFma2xqU251YkF4WjhiaUZ3dmpPeVNzbnluMWlmNnFQcTlnQkkyd2ZHNUMKdmgrV3NYZXA1RmpEUmFOK3VnajFsVjJhT3MwcDhtUk5ickUxSjZnSWw4MGFLVXZ1ZzJDT2VtNi90a1A1dnp6OQpabzBwRDhRV1ZTN1 [...]
    url: https://127.0.0.1:23443/mutate
  failurePolicy: Ignore
  matchPolicy: Exact
  name: iam-for-pods.amazonaws.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
  sideEffects: Unknown
  timeoutSeconds: 30
